<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingHorizontal="@dimen/l"
    android:paddingTop="@dimen/l">

    <ImageButton
        android:id="@+id/btnClose"
        android:layout_width="@dimen/xl"
        android:layout_height="@dimen/xl"
        android:layout_alignParentEnd="true"
        android:backgroundTint="@android:color/transparent"
        android:src="@drawable/ic_close" />

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/s"
        android:text="@string/detail_account"
        android:textColor="@color/text_primary"
        android:textSize="24sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/lblUsername"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvTitle"
        android:layout_marginTop="@dimen/m"
        android:text="@string/lbl_username"
        android:textColor="@color/text_secondary"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/tvUsername"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/lblUsername"
        android:text="@string/ex_username"
        android:textColor="@color/text_primary"
        android:textSize="16sp" />

    <Button
        android:id="@+id/btnCopy"
        style="@style/primaryButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvUsername"
        android:layout_marginTop="@dimen/xl"
        android:text="@string/copy_password" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@id/btnCopy"
        android:gravity="center"
        android:text="@string/edit_account"
        android:textColor="@color/text_primary"
        android:textStyle="bold" />
</RelativeLayout>