<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardCornerRadius="15dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/l">

        <ImageButton
            android:id="@+id/btnClose"
            android:layout_width="@dimen/xl"
            android:layout_height="@dimen/xl"
            android:layout_alignParentEnd="true"
            android:backgroundTint="@android:color/transparent"
            android:src="@drawable/ic_close" />

        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/account"
            android:textColor="@color/text_primary"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvSubtitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tvTitle"
            android:layout_marginTop="@dimen/xs"
            android:text="@string/more_option"
            android:textColor="@color/text_secondary"
            android:textSize="14sp" />

        <Button
            android:id="@+id/btnCopy"
            style="@style/outlineButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tvSubtitle"
            android:layout_marginTop="@dimen/l"
            android:text="@string/copy_password" />

        <Button
            android:id="@+id/btnEdit"
            style="@style/outlineButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/btnCopy"
            android:layout_marginTop="@dimen/s"
            android:text="@string/edit" />

        <Button
            android:id="@+id/btnDelete"
            style="@style/outlineButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/btnEdit"
            android:layout_marginTop="@dimen/s"
            android:text="@string/Delete" />
    </RelativeLayout>
</androidx.cardview.widget.CardView>