<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardCornerRadius="15dp">
<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="@dimen/l">

    <ImageButton
        android:id="@+id/btnClose"
        android:layout_width="@dimen/xl"
        android:layout_height="@dimen/xl"
        android:layout_alignParentEnd="true"
        android:backgroundTint="@android:color/transparent"
        android:src="@drawable/ic_close" />

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/s"
        android:text="@string/social_media"
        android:textColor="@color/text_primary"
        android:textSize="24sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tvSubtitle"
        android:layout_below="@id/tvTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/more_option"
        android:textColor="@color/text_secondary"
        android:textSize="14sp" />

    <Button
        android:id="@+id/btnEdit"
        style="@style/outlineButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tvSubtitle"
        android:layout_marginTop="@dimen/l"
        android:text="@string/edit" />

    <Button
        android:id="@+id/btnDelete"
        android:layout_below="@id/btnEdit"
        style="@style/outlineButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/s"
        android:text="@string/Delete" />
</RelativeLayout>
</androidx.cardview.widget.CardView>