<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="@dimen/s"
    android:background="@drawable/bg_card_item"
    android:paddingHorizontal="@dimen/m"
    android:paddingVertical="@dimen/ms">

    <TextView
        android:id="@+id/tvSosmed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ex_sosmed"
        android:textColor="@color/text_primary"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/tvUsername"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tvSosmed"
        android:layout_marginTop="@dimen/xs"
        android:text="@string/ex_username"
        android:textColor="@color/text_secondary"
        android:textSize="14sp" />

    <ImageView
        android:id="@+id/ivMore"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_centerVertical="true"
        android:contentDescription="@string/threee_dots_more_option"
        android:src="@drawable/ic_more_dark" />
</RelativeLayout>