<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    app:cardCornerRadius="15dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/l">

        <ImageButton
            android:id="@+id/btnClose"
            android:layout_width="@dimen/xl"
            android:layout_height="@dimen/xl"
            android:layout_alignParentEnd="true"
            android:visibility="invisible"
            android:backgroundTint="@android:color/transparent"
            android:src="@drawable/ic_close" />

        <TextView
            android:id="@+id/txtTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/s"
            android:text="@string/delete_sosmed_title"
            android:textColor="@color/text_primary"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txtSubtitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txtTitle"
            android:text="@string/delete_sosmed_subtitle"
            android:textColor="@color/text_secondary"
            android:textSize="14sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txtSubtitle"
            android:layout_marginTop="@dimen/l"
            android:orientation="horizontal"
            android:weightSum="2">

            <Button
                android:id="@+id/btnCancel"
                style="@style/outlineButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/s"
                android:layout_weight="1"
                android:text="@string/Cancel" />

            <Button
                android:id="@+id/btnDelete"
                style="@style/primaryButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/s"
                android:layout_weight="1"
                android:text="@string/Delete"
                app:cornerRadius="10dp" />
        </LinearLayout>
    </RelativeLayout>
</androidx.cardview.widget.CardView>