<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.MainActivity">

    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="match_parent"
        android:layout_height="@dimen/toolbar_size"
        android:background="@color/primary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            style="@style/toolbarTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name" />
    </RelativeLayout>

    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="@dimen/xl"
        android:background="@color/primary"
        app:layout_constraintTop_toBottomOf="@+id/relativeLayout" />

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/xl"
        android:background="@drawable/bg_half_rounded_white"
        app:layout_constraintTop_toBottomOf="@+id/relativeLayout" />

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="@dimen/l"
        app:layout_constraintTop_toBottomOf="@+id/relativeLayout">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/sosmedTitle"
                style="@style/sectionTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/xl"
                android:text="@string/social_media" />

            <TextView
                android:id="@+id/recentTitle"
                style="@style/sectionTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/sosmedTitle"
                android:layout_marginTop="@dimen/l"
                android:text="@string/recently_added" />

            <TextView
                android:id="@+id/recentMore"
                style="@style/sectionSubtitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/recentTitle"
                android:layout_alignParentEnd="true"
                android:text="@string/see_more" />

            <ListView
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_below="@id/recentTitle"
                android:layout_marginTop="@dimen/s"
                android:nestedScrollingEnabled="true"
                tools:listitem="@layout/item_account" />
        </RelativeLayout>
    </androidx.core.widget.NestedScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>